--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -9,7 +9,7 @@
 						能夠創造更多幸福！
 					</p>
 				</div>
-				<div class="wd-content">
+				<div class="wd-intro-content">
 					<p class="wd-subtitle">
 						三三吾鄉婚禮小物<br>
 						諮詢免費送 3 包天然皂絲包！
@@ -20,7 +20,7 @@
 				</div>
 			</div>
 			<div class="wd-intro">
-				<div class="wd-content">
+				<div class="wd-intro-content">
 					<p class="wd-title">
 						什麼是皂絲包？
 					</p>
@@ -84,7 +84,7 @@
 				<div class="wd-main-img">
 					<!-- img .full-width-img -->
 				</div>
-				<div class="wd-content">
+				<div class="wd-intro-content">
 					<p class="wd-title">
 						你的放心，<br>
 						來自於我們對原料的執著
@@ -96,7 +96,7 @@
 			</div>
 			<hr class="wd-intro-sep">
 			<div class="wd-intro">
-				<div class="wd-content">
+				<div class="wd-intro-content">
 					<p class="wd-title">
 						清透的呼吸感，<br>
 						肌膚最知道
@@ -114,7 +114,7 @@
 				<div class="wd-main-img">
 					<!-- img .full-width-img -->
 				</div>
-				<div class="wd-content">
+				<div class="wd-intro-content">
 					<p class="wd-title">
 						隨時隨地，清爽潔淨
 					</p>
@@ -125,7 +125,7 @@
 			</div>
 			<hr class="wd-intro-sep">
 			<div class="wd-intro">
-				<div class="wd-content">
+				<div class="wd-intro-content">
 					<p class="wd-title">
 						揮別浪費，傳遞真實
 					</p>
@@ -151,10 +151,14 @@
 					</p>
 				</div>
 			</div>
-			<div id="wd-media-reports">
-
+			<div class="wd-section" id="wd-media-reports">
+				<p class="wd-title">
+					媒體報導
+				</p>
 			</div>
-			<div id="wd-customer-feedbacks">
-
+			<div class="wd-section" id="wd-customer-feedbacks">
+				<p class="wd-title">
+					感謝大家熱烈支持！
+				</p>
 			</div>
 		</main>
