--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -1,5 +1,5 @@
 		<main>
-			<div id="wedding-advice">
+			<div id="wd-advice">
 				<div class="wd-main-img">
 					<!-- img .full-width-img -->
 				</div>
@@ -41,7 +41,7 @@
 					三三吾鄉的婚禮皂絲包提供客製化的貼紙與吊牌，無論你的婚禮是日系森林風、還是歐美復古風，多達 15 種的貼紙設計都能夠讓你自由搭配，展現用心與巧思。
 				</p>
 			</div>
-			<div id="wedding-simple-procedure">
+			<div id="wd-simple-procedure">
 				<div class="wd-main-img">
 					<!-- img .full-width-img -->
 				</div>
@@ -151,14 +151,117 @@
 					</p>
 				</div>
 			</div>
-			<div class="wd-section" id="wd-media-reports">
+			<div class="wd-section">
 				<p class="wd-title">
 					媒體報導
 				</p>
+				<div id="wd-media-reports">
+					<div class="wd-media-report">
+						<p class="wd-text wd-mr-comment">
+							「創立三三吾鄉的理念，為的就是讓大眾看見喜憨兒，知道他們價值所在，並實現一個沒有歧視的夢。」
+						</p>
+						<div class="wd-mr-source">
+							<!-- img .full-width-img -->
+						</div>
+					</div>
+					<div class="wd-media-report">
+						<p class="wd-text wd-mr-comment">
+							「對喜憨兒來說，擁有專業是一件引以為傲且快樂的事情。」
+						</p>
+						<div class="wd-mr-source">
+							<!-- img .full-width-img -->
+						</div>
+					</div>
+					<div class="wd-media-report">
+						<p class="wd-text wd-mr-comment">
+							「三三以全新的合作模式，結合台東在地小農及憨兒 」
+						</p>
+						<div class="wd-mr-source">
+							<!-- img .full-width-img -->
+						</div>
+					</div>
+					<div class="wd-media-report">
+						<p class="wd-text wd-mr-comment">
+							「手工皂對於憨兒們儘管是困難的學習，但仍然不改變他們對產品的堅持。」
+						</p>
+						<div class="wd-mr-source">
+							<!-- img .full-width-img -->
+						</div>
+					</div>
+					<div class="wd-media-report">
+						<p class="wd-text wd-mr-comment">
+							「用好的油、好的原料製作手工香皂，提升社福團體產製的品質」
+						</p>
+						<div class="wd-mr-source">
+							<!-- img .full-width-img -->
+						</div>
+					</div>
+					<div class="wd-media-report">
+						<p class="wd-text wd-mr-comment">
+							「就讀臺大社工系的尹又令，選擇了用這種高難度的社會企業來創業，成立了『三三吾鄉』」
+						</p>
+						<div class="wd-mr-source">
+							<!-- img .full-width-img -->
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="wd-section" id="wd-customer-feedbacks">
+			<div class="wd-section">
 				<p class="wd-title">
 					感謝大家熱烈支持！
 				</p>
+				<div id="wd-customer-feedbacks">
+					<div class="wd-customer-feedback">
+						<!-- img .full-width-img -->
+					</div>
+					<div class="wd-customer-feedback">
+						<!-- img .full-width-img -->
+					</div>
+				</div>
+			</div>
+			<div id="wd-opportunities">
+				<div class="wd-main-img">
+					<!-- img .full-width-img -->
+				</div>
+				<div class="wd-text-cover">
+					<p class="wd-title">
+						平均一場婚禮，<br>
+						能夠提供 20 個憨兒一週的工作量！
+					</p>
+					<p class="wd-text">
+						你知道嗎？近年來由於公益資源縮減，在偏鄉的憨兒小作所陸續倒閉，目前台灣有約八成的憨兒沒辦法擁有穩定的工作機會⋯⋯
+						其實，對他們來說最重要的不是金錢，而是擁有再平凡不過的穩定上下班、朋友，還有努力工作的成就感。
+					</p>
+				</div>
+			</div>
+			<div class="wd-slogan" id="wd-img-142">
+				<p class="wd-title">
+					選用三三皂絲包作為婚禮小物
+				</p>
+				<p class="wd-super-title">
+					你的幸福婚禮，也能帶給憨兒們幸福！
+				</p>
+			</div>
+			<div id="wd-cta">
+				<div class="wd-intro-content">
+					<p class="wd-title">
+						填表就送皂絲包！
+					</p>
+					<p class="wd-text">
+						即日起，只要填寫諮詢表<br>
+						就可免費獲得三組婚禮皂絲包！<br>
+						數量有限，送完為止！
+					</p>
+					<p class="wd-title">
+						再送驚喜贈禮及現金折扣！
+					</p>
+					<p class="wd-text">
+						預約參加皂絲 DIY 行程（免費），與憨兒一起製作你的婚禮小物，會有讓你想不到的驚喜贈禮與現金折扣！<br>
+						（填寫諮詢表後將有專人與你解說）
+					</p>
+				</div>
+				<div class="wd-main-img">
+					<!-- img .full-width-img -->
+				</div>
 			</div>
 		</main>
