--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -1,7 +1,14 @@
 		<main>
 			<div id="wd-advice">
 				<div class="wd-main-img">
-					<!-- img .full-width-img -->
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 				</div>
 				<div class="wd-text-cover">
 					<p class="wd-super-title">
@@ -14,7 +21,7 @@
 						三三吾鄉婚禮小物<br>
 						諮詢免費送 3 包天然皂絲包！
 					</p>
-					<a href="#" class="wedding-text-btn">
+					<a href="#wd-cta" class="wedding-text-btn">
 						立即諮詢
 					</a>
 				</div>
@@ -29,7 +36,10 @@
 					</p>
 				</div>
 				<div class="wd-main-img">
-					<!-- img .full-width-img -->
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 				</div>
 			</div>
 			<div class="wd-image-background" id="wd-img-samples"></div>
@@ -43,7 +53,10 @@
 			</div>
 			<div id="wd-simple-procedure">
 				<div class="wd-main-img">
-					<!-- img .full-width-img -->
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 				</div>
 				<div class="wd-text-cover">
 					<p class="wd-title">
@@ -82,7 +95,10 @@
 			</div>
 			<div class="wd-intro">
 				<div class="wd-main-img">
-					<!-- img .full-width-img -->
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 				</div>
 				<div class="wd-intro-content">
 					<p class="wd-title">
@@ -106,13 +122,19 @@
 					</p>
 				</div>
 				<div class="wd-main-img">
-					<!-- img .full-width-img -->
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 				</div>
 			</div>
 			<hr class="wd-intro-sep">
 			<div class="wd-intro">
 				<div class="wd-main-img">
-					<!-- img .full-width-img -->
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 				</div>
 				<div class="wd-intro-content">
 					<p class="wd-title">
@@ -135,12 +157,18 @@
 					</p>
 				</div>
 				<div class="wd-main-img">
-					<!-- img .full-width-img -->
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 				</div>
 			</div>
 			<div id="wd-img-future">
 				<div class="wd-main-img">
-					<!-- img .full-width-img -->
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 				</div>
 				<div class="wd-text-cover">
 					<p class="wd-super-title">
@@ -161,7 +189,10 @@
 							「創立三三吾鄉的理念，為的就是讓大眾看見喜憨兒，知道他們價值所在，並實現一個沒有歧視的夢。」
 						</p>
 						<div class="wd-mr-source">
-							<!-- img .full-width-img -->
+							<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 						</div>
 					</div>
 					<div class="wd-media-report">
@@ -169,7 +200,10 @@
 							「對喜憨兒來說，擁有專業是一件引以為傲且快樂的事情。」
 						</p>
 						<div class="wd-mr-source">
-							<!-- img .full-width-img -->
+							<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 						</div>
 					</div>
 					<div class="wd-media-report">
@@ -177,7 +211,10 @@
 							「三三以全新的合作模式，結合台東在地小農及憨兒 」
 						</p>
 						<div class="wd-mr-source">
-							<!-- img .full-width-img -->
+							<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 						</div>
 					</div>
 					<div class="wd-media-report">
@@ -185,7 +222,10 @@
 							「手工皂對於憨兒們儘管是困難的學習，但仍然不改變他們對產品的堅持。」
 						</p>
 						<div class="wd-mr-source">
-							<!-- img .full-width-img -->
+							<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 						</div>
 					</div>
 					<div class="wd-media-report">
@@ -193,7 +233,10 @@
 							「用好的油、好的原料製作手工香皂，提升社福團體產製的品質」
 						</p>
 						<div class="wd-mr-source">
-							<!-- img .full-width-img -->
+							<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 						</div>
 					</div>
 					<div class="wd-media-report">
@@ -201,7 +244,10 @@
 							「就讀臺大社工系的尹又令，選擇了用這種高難度的社會企業來創業，成立了『三三吾鄉』」
 						</p>
 						<div class="wd-mr-source">
-							<!-- img .full-width-img -->
+							<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 						</div>
 					</div>
 				</div>
@@ -212,16 +258,25 @@
 				</p>
 				<div id="wd-customer-feedbacks">
 					<div class="wd-customer-feedback">
-						<!-- img .full-width-img -->
+						<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 					</div>
 					<div class="wd-customer-feedback">
-						<!-- img .full-width-img -->
+						<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 					</div>
 				</div>
 			</div>
 			<div id="wd-opportunities">
 				<div class="wd-main-img">
-					<!-- img .full-width-img -->
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 				</div>
 				<div class="wd-text-cover">
 					<p class="wd-title">
@@ -242,6 +297,122 @@
 					你的幸福婚禮，也能帶給憨兒們幸福！
 				</p>
 			</div>
+			<div id="wd-special-offers">
+				<div class="wd-offer">
+					<div class="wd-offer-name">
+						<p class="wd-title">
+							簡約精緻方案
+						</p>
+						<p class="wd-text">
+							- 提供憨兒一週的工作量 -
+						</p>
+					</div>
+					<div class="wd-offer-price">
+						<p class="wd-super-title">
+							$ 3,999
+							<span class="wd-text">
+								起
+							</span>
+						</p>
+						<p class="wd-text">
+							(原價 $7,000)
+						</p>
+					</div>
+					<div class="wd-offer-intro">
+						<p class="wd-text">
+							100 組皂絲包 (10 桌)
+						</p>
+						<p class="wd-text">
+							客製化貼紙與吊牌
+						</p>
+						<p class="wd-text">
+							*內容價格數量皆可客製化
+						</p>
+					</div>
+					<div class="wd-offer-bonus">
+						<p class="wd-text">
+							伴郎伴娘禮  5 份
+						</p>
+					</div>
+				</div>
+				<div class="wd-primary-offer">
+					<div class="wd-offer-name">
+						<p class="wd-super-title">
+							幸福推薦方案
+						</p>
+						<p class="wd-text">
+							- 提供憨兒 20 天的工作量 -
+						</p>
+					</div>
+					<div class="wd-offer-price">
+						<p class="wd-super-title">
+							$ 9,999
+							<span class="wd-text">
+								起
+							</span>
+						</p>
+						<p class="wd-text">
+							(原價 $18,500)
+						</p>
+					</div>
+					<div class="wd-offer-intro">
+						<p class="wd-text">
+							200 組皂絲包 (20 桌)
+						</p>
+						<p class="wd-text">
+							客製化貼紙與吊牌
+						</p>
+						<p class="wd-text">
+							*內容價格數量皆可客製化
+						</p>
+					</div>
+					<div class="wd-offer-bonus">
+						<p class="wd-text">
+							進場禮 60 份
+						</p>
+						<p class="wd-text">
+							伴郎伴娘禮 9 份
+						</p>
+						<p class="wd-text">
+							特色探房禮 3 組
+						</p>
+					</div>
+				</div>
+				<div class="wd-offer">
+					<div class="wd-offer-name">
+						<p class="wd-title">
+							豪華五禮方案
+						</p>
+						<p class="wd-text">
+							- 提供憨兒 20 天以上的工作量 -
+						</p>
+					</div>
+					<div class="wd-offer-price">
+						<p class="wd-title">
+							洽詢獲得優惠報價
+						</p>
+					</div>
+					<div class="wd-offer-intro">
+						<p class="wd-text">
+							200 組以上皂絲包 (20 桌以上)
+						</p>
+						<p class="wd-text">
+							客製化貼紙與吊牌
+						</p>
+						<p class="wd-text">
+							*內容價格數量皆可客製化
+						</p>
+					</div>
+					<div class="wd-offer-bonus">
+						<p class="wd-text">
+							探房禮 / 伴郎伴娘禮 /
+						</p>
+						<p class="wd-text">
+							迎賓禮 / 二進禮 / 送客禮
+						</p>
+					</div>
+				</div>
+			</div>
 			<div id="wd-cta">
 				<div class="wd-intro-content">
 					<p class="wd-title">
@@ -261,7 +432,10 @@
 					</p>
 				</div>
 				<div class="wd-main-img">
-					<!-- img .full-width-img -->
+					<picture>
+						<source srcset="" type="">
+						<img class="full-width-img" src="resource/img/" alt="">
+					</picture>
 				</div>
 			</div>
 		</main>
